--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,10 @@
       <ion-icon name="send"></ion-icon>
       <ion-label>Tab Three</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="feed">
+      <ion-icon name="paper"></ion-icon>
+      <ion-label>Feed</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
